WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29040
Geolocation does not correctly handle reentrant calls from callbacks
https://bugs.webkit.org/show_bug.cgi?id=29040
Summary
Geolocation does not correctly handle reentrant calls from callbacks
Steve Block
Reported
2009-09-08 10:47:42 PDT
When Geolocation callbacks are made, currently running requests (oneShots and watchers) are stopped immediately afterwards. This means that if reentrant calls to Geolocation methods are made from the callbacks, any new requests started by those reentrant calls are immediately stopped.
Attachments
Patch 1 for bug 29040
(13.71 KB, patch)
2009-09-09 10:18 PDT
,
Steve Block
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2009-09-08 10:51:00 PDT
The tests for
Bug 27944
require that this bug is fixed.
Steve Block
Comment 2
2009-09-09 10:18:06 PDT
Created
attachment 39275
[details]
Patch 1 for
bug 29040
Fixes bug and adds LayoutTests.
Ben Murdoch
Comment 3
2009-09-10 10:17:18 PDT
Landed as
r48258
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug