WebCore/page/Geolocation.h
@@ -92,12 +92,7 @@ private:
     bool hasListeners() const { return !m_oneShots.isEmpty() || !m_watchers.isEmpty(); }
 
     void sendError(Vector<RefPtr<GeoNotifier> >&, PositionError*);
-    void sendErrorToOneShots(PositionError*);
-    void sendErrorToWatchers(PositionError*);
-    
     void sendPosition(Vector<RefPtr<GeoNotifier> >&, Geoposition*);
-    void sendPositionToOneShots(Geoposition*);
-    void sendPositionToWatchers(Geoposition*);
     
     static void stopTimer(Vector<RefPtr<GeoNotifier> >&);
     void stopTimersForOneShots();
